tests/vertical-slice/accept/static_trait_dispatch_inline_supertrait.hew
trait Super {
    fn name(val: Self) -> string;
}

trait Sub: Super {}

type Widget { label: string; }

impl Sub for Widget {
    fn name(w: Widget) -> string { "inline" }
}

fn get_name<T: Sub>(item: T) -> string {
    item.name()
}

fn main() -> i64 {
    println(get_name(Widget { label: "direct" }));
    0
}
